Added a patch so that buffer overflow checking is not performed if errors would surpressed.
Added debugfcnconstraint flag to make lclint do checking anyway.

Changed test suit to use this flag.

--- a/test/Makefile
+++ b/test/Makefile
@@ -43,7 +43,7 @@ LCLINTP = $(LCLINT)
 # Make sure .lclintrc files are not used so test results do not
 # depend on local settings.
 LCLINTRN = $(LCLINTP) -nof -hints -booltype "bool"
-LCLINTR = $(LCLINTRN) -exportlocal
+LCLINTR = $(LCLINTRN) -exportlocal +debugfcnconstraint
 
 UNITTESTS = help sizeoftest bufferTest simplebufferConstraintTests  moreBufferTests globalbufferannotation maxset strchr for abstptr abstract alias alttypes ansireserved argorder args blocks break cases cast \
    charlit clauses commentchar compdestroy controldepth csyntax czechnames czechoslovaknames deadparam \
