--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -881,6 +881,11 @@ lintnew:
                     +forcehints -misplacedsharequal +showsourceloc -unrecogcomments \
                     -supcounts -fcnuse -exportlocal -constuse -mts file -mts filerw
 
+lintbuffercheck: 
+	./lclint -f lclint.lclintrc $(DEFAULT_INCLUDES) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) +singleinclude $(ALLSRC) $(LCLSRC) -dump lclint \
+                    +forcehints -misplacedsharequal +showsourceloc -unrecogcomments \
+                    -supcounts -fcnuse -exportlocal -constuse -mts file -mts filerw +arraybounds
+
 .PHONY: purify
 purify: $(lclint_OBJECTS)
 	purify $(LINK) -o lclint$(EXEEXT) $^ $(lclint_LDADD)
