--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -203,6 +203,11 @@ lintnew:
                     +forcehints -misplacedsharequal +showsourceloc -unrecogcomments \
                     -supcounts -fcnuse -exportlocal -constuse -mts file -mts filerw
 
+lintbuffercheck: 
+	./lclint -f lclint.lclintrc $(DEFAULT_INCLUDES) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) +singleinclude $(ALLSRC) $(LCLSRC) -dump lclint \
+                    +forcehints -misplacedsharequal +showsourceloc -unrecogcomments \
+                    -supcounts -fcnuse -exportlocal -constuse -mts file -mts filerw +arraybounds
+
 
 
 .PHONY: purify
