--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,6 @@
 dnl Process with autoconf to create a configure script  -*- Autoconf -*-
 AC_PREREQ(2.50)
+
 AC_INIT([Splint], [3.0.1.4], [splint-bug@splint.org], [splint])
 
 dnl This MUST precede any other macro
@@ -201,7 +202,7 @@ dnl                  test/tests2.2/Makefile
 dnl                  test/db1/Makefile])
 
 AC_CONFIG_FILES([Makefile imports/Makefile lib/Makefile src/Makefile
-                 test/Makefile doc/Makefile preBuilt/Makefile])
+                 test/Makefile doc/Makefile bin/Makefile])
 AC_OUTPUT 
 
 
