--- a/Makefile.binary.in
+++ b/Makefile.binary.in
@@ -87,7 +87,9 @@ install_sh = @install_sh@
 
 AUTOMAKE_OPTIONS = 1.5 foreign
 
-SUBDIRS = preBuilt lib imports  doc
+binaryDir = bin
+
+SUBDIRS = $(binaryDir) lib imports  doc
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/config/mkinstalldirs
@@ -408,6 +410,11 @@ uninstall-info: uninstall-info-recursive
 	uninstall uninstall-am uninstall-info-am \
 	uninstall-info-recursive uninstall-recursive
 
+
+all: config.h src/splint
+
+src/splint: $(binaryDir)/splint
+	ln -s ../$(binaryDir)/splint src/splint
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
