--- a/Makefile.in
+++ b/Makefile.in
@@ -90,27 +90,31 @@ AUTOMAKE_OPTIONS = 1.5 foreign
 binaryfixscript = ./fixBinaryDist.sh
 SUBDIRS = lib imports test doc src
 
+binaryDir = bin
+binaryDirFiles = $(binaryDir)/Makefile.am $(binaryDir)/Makefile.in
+
 binaryBuiltFiles = Makefile.binary.am configure.binary.ac
+
 #include these in case we're trying to build on a systems
 #without the bleeding edge versions of automake and autoconf
 binaryDerivedFiles = Makefile.binary.in configure.binary
 
-EXTRA_DIST = $(binaryfixscript) $(binaryBuiltFiles) $(binaryDerivedFiles) preBuilt/Makefile.am preBuilt/Makefile.in
+EXTRA_DIST = $(binaryfixscript) $(binaryBuiltFiles) $(binaryDerivedFiles) $(binaryDirFiles)
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/config/mkinstalldirs
 CONFIG_HEADER = config.h
-CONFIG_CLEAN_FILES = preBuilt/Makefile
+CONFIG_CLEAN_FILES =
 DIST_SOURCES =
 
 RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
 	uninstall-info-recursive all-recursive install-data-recursive \
 	install-exec-recursive installdirs-recursive install-recursive \
 	uninstall-recursive check-recursive installcheck-recursive
-DIST_COMMON = README ./stamp-h.in Makefile.am Makefile.in acinclude.m4 \
-	aclocal.m4 config.hin config/config.guess config/config.sub \
-	config/depcomp config/install-sh config/missing \
-	config/mkinstalldirs configure configure.ac
+DIST_COMMON = README ./stamp-h.in ChangeLog Makefile.am Makefile.in \
+	acinclude.m4 aclocal.m4 config.hin config/config.guess \
+	config/config.sub config/depcomp config/install-sh \
+	config/missing config/mkinstalldirs configure configure.ac
 DIST_SUBDIRS = $(SUBDIRS)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
@@ -156,8 +160,6 @@ $(srcdir)/./stamp-h.in: $(top_srcdir)/configure.ac $(ACLOCAL_M4)
 
 distclean-hdr:
 	-rm -f config.h
-preBuilt/Makefile: $(top_builddir)/config.status $(top_srcdir)/preBuilt/Makefile.in
-	cd $(top_builddir) && CONFIG_FILES=$@ CONFIG_HEADERS= CONFIG_LINKS= $(SHELL) ./config.status
 uninstall-info-am:
 
 # This directory's subdirectories are mostly independent; you can cd
@@ -263,7 +265,7 @@ GZIP_ENV = --best
 distdir: $(DISTFILES)
 	-chmod -R a+w $(distdir) >/dev/null 2>&1; rm -rf $(distdir)
 	mkdir $(distdir)
-	$(mkinstalldirs) $(distdir)/config $(distdir)/preBuilt
+	$(mkinstalldirs) $(distdir)/$(binaryDir) $(distdir)/config
 	@for file in $(DISTFILES); do \
 	  if test -f $$file; then d=.; else d=$(srcdir); fi; \
 	  dir=`echo "$$file" | sed -e 's,/[^/]*$$,,'`; \
@@ -421,10 +423,24 @@ uninstall-info: uninstall-info-recursive
 	uninstall-info-recursive uninstall-recursive
 
 
-bindist:
+#try to remake these but don't stop if it fails.
+configure.binary:configure.binary.ac
+	-autoconf -oconfigure.binary configure.binary.ac
+
+Makefile.binary.in:Makefile.binary.am
+	-automake Makefile.binary
+
+$(binaryDir)/Makefile.in: $(binaryDir)/Makefile.am
+	-automake $(binaryDir)/Makefile
+
+preDist:  $(binaryDir)/Makefile.in  $(binaryDerivedFiles) 
+
+bindist: $(binaryDerivedFiles) 
 	$(MAKE)
-	$(CP) src/splint preBuilt/splint
-	$(MAKE) -e dist dh_script=$(binaryfixscript) SUBDIRS="preBuilt lib imports  doc"
+	$(RM) -f $(binaryDir)/splint
+	$(CP) src/splint $(binaryDir)/splint
+	$(MAKE) -e dist dh_script=$(binaryfixscript) SUBDIRS="$(binaryDir) lib imports  doc"
+	$(MV) $(distdir).tar.gz $(distdir).`uname`.tgz 
 
 dist-hook:
 	cd $(distdir); 	pwd; $(dh_script)
